--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% if users %}
-    <table id="users" class="table table-striped">
+    <table id="users" class="table table-striped col-md-9" style="text-align:center">
       <thead>
         <tr>
           <th>Firstname</th>
@@ -18,7 +18,10 @@
             <td>{{ user.firstname }}</td>
             <td>{{ user.lastname }}</td>
             <td>
-              <a href="/user/{{ user.id }}" class="btn btn-dark">Show</a>
+              <a href="/user/{{ user.id }}" class="btn btn-info">Show</a>
+              <a href="/user/edit/{{ user.id }}" class="btn btn-dark">Edit</a>
+              <a href="#" class="btn btn-danger delete-user" 
+              data-id="{{ user.id }}">Delete</a>
             </td>
           </tr>
         {% endfor %}
@@ -27,4 +30,8 @@
   {% else %}
     <p>No users to display</p>
   {% endif %}
+{% endblock %}
+
+{% block javascripts %}
+  <script src="/js/main.js"></script>
 {% endblock %}
