added email field

--- a/templates/users/show.html.twig
+++ b/templates/users/show.html.twig
@@ -15,6 +15,10 @@
       <td>{{ user.lastname }}</td>
     </tr>
     <tr>
+      <th scope="row">Email:</th>
+      <td>{{ user.email }}</td>
+    </tr>
+    <tr>
       <th scope="row">Date of Birth</th>
       <td>{{ user.dob|date('d-m-Y') }}</td>
     </tr>
